# gdtype-python

./: .gitignore  pyproject.toml
src/: install-devel.sh  install-package.sh
src/gdtype/: commontypes.py
src/gdtype.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/testgdtype/: test_binaryapiv4.py
